better close button

--- a/notification.html
+++ b/notification.html
@@ -1,14 +1,30 @@
 <html>
-<head></head>
-<body style='overflow: hidden; -webkit-user-select: none;'>
-<div id="container">
-	<img src="" id="appIcon" />
-	<img src="" id="image" />
-	<div id="text">
-		<b id="title"></b>
-		<p id="message"></p>
-	</div>
-	<div id="close">X</div>
-</div>
-</body>
+  <head></head>
+  <body style="overflow: hidden; -webkit-user-select: none">
+    <div id="container">
+      <img src="" id="appIcon" />
+      <img src="" id="image" />
+      <div id="text">
+        <b id="title"></b>
+        <p id="message"></p>
+      </div>
+      <div id="close">
+        <svg
+          width="12"
+          height="12"
+          viewBox="0 0 12 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M1.99997 2L6 6M6 6L9.99997 2M6 6L1.99997 10M6 6L9.99997 10"
+            stroke="#B8B7BF"
+            strokeWidth="1.5"
+            strokeLinecap="round"
+            strokeLinejoin="round"
+          />
+        </svg>
+      </div>
+    </div>
+  </body>
 </html>
