--- a/notification.html
+++ b/notification.html
@@ -3,15 +3,23 @@
   <body style="overflow: hidden; -webkit-user-select: none">
     <div id="container">
       <img src="" id="appIcon" />
-      <img src="" id="image" />
       <div id="text">
-        <b id="title"></b>
+        <b
+          id="title"
+          style="
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+          "
+        ></b>
         <p id="message"></p>
       </div>
+      <img src="" id="image" />
       <div id="close">
         <svg
-          width="12"
-          height="12"
+          width="16"
+          height="16"
           viewBox="0 0 12 12"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
@@ -19,9 +27,9 @@
           <path
             d="M1.99997 2L6 6M6 6L9.99997 2M6 6L1.99997 10M6 6L9.99997 10"
             stroke="#B8B7BF"
-            strokeWidth="1.5"
-            strokeLinecap="round"
-            strokeLinejoin="round"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
           />
         </svg>
       </div>
